force-app/main/default/objects/AFSC__FS_Exclusion__c/AFSC__FS_Exclusion__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: Scan exclusions</description>
    <label>Exclusion</label>
    <nameField>
        <displayFormat>Ecx-{0000}</displayFormat>
        <label>Exclusion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>