force-app/main/default/objects/AFSC__FS_Exclusion__c/fields/AFSC__Active__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>