force-app/main/default/objects/AFSC__FS_Exclusion__c/fields/AFSC__Checksum__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Checksum__c</fullName>
    <label>Checksum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>