force-app/main/default/objects/AFSC__FS_Exclusion__c/fields/AFSC__Domains__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Domains__c</fullName>
    <label>Domains</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>