force-app/main/default/objects/AFSC__FS_Exclusion__c/fields/AFSC__Exclusion__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Exclusion__c</fullName>
    <label>Exclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>