force-app/main/default/objects/AFSC__FS_Exclusion__c/fields/AFSC__File_Extensions__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Extensions__c</fullName>
    <label>File Extensions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>