force-app/main/default/objects/AFSC__FS_Exclusion__c/fields/AFSC__Hosts__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Hosts__c</fullName>
    <label>Hosts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>