force-app/main/default/objects/AFSC__FS_Exclusion__c/fields/AFSC__Type__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Type__c</fullName>
    <label>Exclusion Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File Protection Settings</fullName>
            </value>
            <value>
                <fullName>URL Protection Settings</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Filetype</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Rich Preview</fullName>
            </value>
            <value>
                <fullName>Blocked Extension or Filetype</fullName>
            </value>
            <value>
                <fullName>Blocked Extension or Filetype Manual Scan</fullName>
            </value>
            <value>
                <fullName>Allowed Extension or Filetype</fullName>
            </value>
            <value>
                <fullName>Excluded Extension or Filetype</fullName>
            </value>
            <value>
                <fullName>Extension or Filetype To Scan</fullName>
            </value>
            <value>
                <fullName>Extension or Filetype to Scan Manual Scan</fullName>
            </value>
            <value>
                <fullName>Excluded Extension or Filetype Manual Scan</fullName>
            </value>
            <value>
                <fullName>Allowed Extension or Filetype Manual Scan</fullName>
            </value>
            <value>
                <fullName>Attachment Location To Scan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>