force-app/main/default/objects/AFSC__FS_Exclusion__c/fields/AFSC__Urls__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Urls__c</fullName>
    <label>Urls</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>